//set the language version
syntax = "proto3";

//this will translate into C# namespace
package Services;

//this will translate into server and client stub
service Service {    
    //this is will translate into a service operation
    rpc TakeBook(Id) returns (BookResult) {}
    rpc ReturnBook(BookInput) returns (Empty) {}
    rpc RepairBook(IdAndWear) returns (Empty) {}
    rpc GetLibraryCapacity(Empty) returns (GetLibraryCapacityOutput) {}
    rpc GetWornOutBooks(Empty) returns (GetWornOutBooksOutput) {}
    rpc GetLibraryBudget(Empty) returns (GetLibraryBudgetOutput) {}
}

message IdAndWear {
    int32 Id = 1;
    float Wear = 2;
}
message Empty {}
//message must be described outside the service definition
message Id {
    int32 Id = 1;
}

message BookInput {
    int32 Id = 1;
    float LoanDuration = 2;
    bool Taken = 3;
    string LoanTime = 4;
    float Wear = 5;
    float RepairPrice = 6;
}

message BookResult {
    int32 Id = 1;
    float LoanDuration = 2;
    bool Taken = 3;
    string LoanTime = 4;
    float Wear = 5;
    float RepairPrice = 6;
}


message GetLibraryCapacityOutput {
    int32 Capacity = 1;
}

message GetWornOutBooksOutput {
    repeated BookResult Books = 1;
}

message GetLibraryBudgetOutput {
    float Budget = 1;
}